opam-version: "2.0"
maintainer: "Pieter Goetschalckx <3.14.e.ter@gmail.com>"
authors: "Pieter Goetschalckx <3.14.e.ter@gmail.com>"
homepage: "https://github.com/314eter/ocaml-xxhash"
bug-reports: "https://github.com/314eter/ocaml-xxhash/issues"
license: "MIT"
doc: "https://314eter.github.io/ocaml-xxhash"
dev-repo: "git://github.com/314eter/ocaml-xxhash.git"
build: [
  # ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
depends: [
  "dune" {>= "2.7"}
  "dune-configurator"
  "ctypes"
  "ctypes-foreign"
  "odoc" {with-doc}
]
depexts: [
  ["xxhash"] {os = "macos" & os-distribution = "homebrew"}
  ["libxxhash-dev"] {os-family = "debian"}
]
synopsis: "Bindings for xxHash, an extremely fast hash algorithm."